--- a/src/components/Anecdote.scss
+++ b/src/components/Anecdote.scss
@@ -1,7 +1,6 @@
 .anecdote {
   .modal-card {
     position: fixed; /* Stay in place */
-    z-index: 2; /* Sit on top */
     right: 0;
     top: 0;
     bottom: 0;
@@ -19,7 +18,6 @@
   .modal-overlay {
     opacity: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
     right: 0;
     top: 0;
     bottom: 0;
