--- a/src/components/LeftMenu.scss
+++ b/src/components/LeftMenu.scss
@@ -1,7 +1,6 @@
 .left-menu {
   .menu-card {
     position: fixed; /* Stay in place */
-    z-index: 2; /* Sit on top */
     left: 0;
     top: 0;
     bottom: 0;
@@ -19,7 +18,6 @@
   .menu-overlay {
     opacity: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
     bottom: 0;
