--- a/src/pages/Index.scss
+++ b/src/pages/Index.scss
@@ -110,3 +110,10 @@
     }
   }
 }
+
+.sticky {
+  position: -webkit-sticky !important; /* Safari */
+  position: sticky !important;
+  align-self: flex-start; /* <-- this is the fix */
+  z-index: 998;
+}
