--- a/src/pages/UIShell.scss
+++ b/src/pages/UIShell.scss
@@ -13,7 +13,6 @@
   border-left-width: 0.5px;
   --tw-border-opacity: 0.15;
   left: calc(3rem + 0.75rem);
-  z-index: 1;
 
   @media screen and (max-width: $xl-minus-1) {
     left: 70px;
